--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.demoble"
+        applicationId 'com.example.demoblecoroutine'
         minSdk 29
         targetSdk 32
         versionCode 1
@@ -48,6 +48,7 @@ android {
 
 dependencies {
 
+    implementation("com.beepiz.blegattcoroutines:blegattcoroutines-core:0.5.0")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
